--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "zod": "^4.3.6"
   },
   "peerDependencies": {
-    "openclaw": ">=2026.1.26",
-    "clawdbot": ">=2026.1.26"
+    "openclaw": ">=2026.1.26"
   },
   "devDependencies": {
     "@types/node": "^25.2.0",
